--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,3 +1,138 @@
+
+:root {
+  --vari1: #793808;
+  --taustavari: #81f07e;
+  --tekstiTausta: #f3f3f3;
+}
+
 body {
-  margin: 10%;
+  margin: 10px;
+}
+
+nav {
+  display: flex;
+  justify-content: flex-start;
+  top: 0;
+  width: 100%;
+  padding: 10px 10px;
+}
+
+.links {
+  display: flex;
+  justify-content: space-around;
+  flex-grow: 1;
+  color: var(--vari1);
+}
+
+.links a {
+  padding: 3%;
+  margin: 0;
+  color: var(--vari1);
+  text-decoration: none;
+}
+
+.links a:hover {
+
+  padding: 28px 48px;
+  color: red;
+  border: red;
+  text-decoration: underline;
+  background-color: antiquewhite;
+  border: solid 1px black;
+  border-radius: 3%;
+
+
+}
+
+.searchBar {
+  display: flex;
+  flex-grow: 1;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 50px;
+
+
+}
+
+.searchBar input {
+  height: 30px;
+  width: calc(100% - 100px);
+  text-align: center;
+  border: solid 2px var(--vari1);
+  border-radius: 5px;
+}
+
+header {
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+
+
+}
+
+.headerImage {
+  height: inherit;
+  background-image: url("src/black-frying-pan-with-spaghetti-sauce-near-brown-wooden-691114.jpg");
+  background-size: 135%;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 50%;
+  flex-grow: 1;
+  position: relative;
+
+}
+
+.headerText {
+  display: flex;
+  text-align: center;
+  background-color: var(--taustavari);
+  flex-grow: 1;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.triangle {
+  width: 0;
+  height: 0;
+  border-bottom: 20vh solid var(--taustavari);
+  border-right: 20vh solid transparent;
+}
+
+.headerText p {
+  margin: 0 !important;
+}
+
+.mainText {
+  text-align: center;
+  margin: 5vh;
+
+}
+
+.mainText p {
+  margin: 0 !important;
+}
+
+.ravintolat {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.ravintola {
+  border: 1px dashed var(--vari1);
+  border-radius: 10px;
+  background-color: var(--tekstiTausta);
+  width: 40%;
+
+  padding-left: 15px;
+}
+
+#langButtons {
+  display: flex;
+  justify-content: center;
+}
+#langButtons button {
+  margin: 15px;
 }
