--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,3 +1,14 @@
 body {
   margin: 10%;
 }
+
+.green {
+  background-color: green;
+}
+
+#touchMe {
+  border: 2px black solid;
+  text-align: center;
+  height: 100px;
+  width: 100px;
+}
