--- a/src/assets/max800width.css
+++ b/src/assets/max800width.css
@@ -17,7 +17,6 @@ header {
 
 .headerText {
   background-color: var(--taustavari);
-  padding: -10px;
 }
 
 .mobileNav {
@@ -109,5 +108,13 @@ html, body {
 
 .mainText p {
   font-size: 1em;
+
+}
+
+.restaurantData {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 2;
+  font-size: 5vw;
 
 }
