--- a/src/assets/stylesDark.css
+++ b/src/assets/stylesDark.css
@@ -148,7 +148,7 @@ header {
 
 .headerImage {
   height: inherit;
-  background-image: url("black-frying-pan-with-spaghetti-sauce-near-brown-wooden-691114.jpg");
+  background-image: url("black-frying-pan-with-spaghetti-sauce-near-brown-wooden-691114 (2).webp");
 
   background-size: 135%;
   background-position: center;
