--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -22,6 +22,7 @@
   --taustavari: #35d6fd;
   --tekstiTausta: #ffffff;
   --hoverLinkki: #e5e5e5;
+  --modalTausta: rgba(0,0,0,0.4);
 }
 
 html, body {
@@ -242,6 +243,11 @@ header {
   margin: 25px;
 }
 
+.restaurantLogo:hover,
+.restaurantLogo:focus {
+  cursor: pointer;
+}
+
 .restaurantData {
   display: flex;
   flex-direction: column;
@@ -284,6 +290,8 @@ header {
 #langButtons button {
   margin: 15px;
   outline: none;
+  font-family: LatoRegular;
+
 }
 
 .ravintolatH3 {
@@ -309,3 +317,50 @@ header {
   font-size: clamp(15px, 2vw, 30px);
 }
 
+
+
+/**Modal css
+  */
+
+#menuModal {
+  display: none;
+  position: fixed;
+  z-index: 2;
+  padding-top: 15%;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--modalTausta)
+}
+
+.modalContent {
+  background-color: var(--tekstiTausta);
+  margin: auto;
+  padding: 20px;
+  border: 1px solid var(--vari1);
+  width: 50%;
+}
+
+.closeModal {
+  color: var(--modalTausta);
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.closeModal:hover,
+.closeModal:focus {
+  color: var(--vari1);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-open {
+  /*overflow-y: hidden;*/
+  /*position: fixed;*/
+  overflow: hidden;
+  position:fixed;
+  width: 100%;
+  height: 100%;
+}
