--- a/src/assets/stylesDark.css
+++ b/src/assets/stylesDark.css
@@ -22,6 +22,7 @@
   --taustavari: #1b2224;
   --tekstiTausta: #131212;
   --hoverLinkki: #e5e5e5;
+  --modalTausta: rgba(0,0,0,0.4);
 }
 
 
@@ -146,7 +147,7 @@ header {
   font-size:clamp(15px, 2vw, 70px);
 }
 
-.headerImage {
+.webp .headerImage {
   height: inherit;
   background-image: url("black-frying-pan-with-spaghetti-sauce-near-brown-wooden-691114 (2).webp");
 
@@ -158,6 +159,11 @@ header {
   flex-grow: 1;
   position: relative;
   z-index: 1;
+
+}
+
+.no-webp headerImage {
+  background-image: url("black-frying-pan-with-spaghetti-sauce-near-brown-wooden-691114.jpg");
 
 }
 
@@ -283,6 +289,7 @@ header {
 #langButtons button {
   margin: 15px;
   outline: none;
+  font-family: LatoRegular;
 }
 
 .ravintolatH3 {
@@ -308,3 +315,47 @@ header {
   font-size: clamp(15px, 2vw, 30px);
 }
 
+
+/**Modal css
+  */
+
+#menuModal {
+  display: none;
+  position: fixed;
+  z-index: 2;
+  padding-top: 15%;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: hidden;
+  background-color: var(--modalTausta)
+}
+
+.modalContent {
+  background-color: var(--tekstiTausta);
+  margin: auto;
+  padding: 20px;
+  border: 1px solid var(--vari1);
+  width: 50%;
+}
+
+.closeModal {
+  color: var(--vari1);
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.closeModal:hover,
+.closeModal:focus {
+  color: var(--modalTausta);
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-open {
+  height: 100vh;
+  overflow-y: hidden;
+  position: fixed;
+}
